Upgrade to use boto3: - upgrade zipnumcluster job (step 3) - improved logging configuration - upgrade requirements/bootstrap

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 mrjob
-boto
+boto3
 pywb
 #-e git+https://github.com/matteobertozzi/Hadoop.git#egg=hadoop&subdirectory=python-hadoop
 -e git+https://github.com/commoncrawl/python-hadoop.git#egg=master
