--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 mrjob
 boto3
 pywb
-#-e git+https://github.com/matteobertozzi/Hadoop.git#egg=hadoop&subdirectory=python-hadoop
--e git+https://github.com/commoncrawl/python-hadoop.git#egg=master
+-e git+https://github.com/commoncrawl/python-hadoop.git@main#egg=hadoop
